--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "autoprefixer": "^9.7.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.11.0",
@@ -19,7 +22,7 @@
     "build": "npm-run-all build:css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-    },
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
